# gol

./: README.md  meson.build
include/: MapGOL.hpp  TMapGOL.hpp  gol_concepts.hpp  gol_functions.hpp  gol_testing.hpp  gol_utility.hpp  meson.build
plaintext/: ak94.txt  blonker.txt
src/: main.cpp  meson.build
subprojects/: .gitignore
unit_tests/: meson.build  test_game_of_life_implementations.cpp  test_gol_functions.cpp  test_testing_functions.cpp  test_unit_test.cpp
